[package]
name = "sharesphere_iface_sphere"
version = "0.1.0"
edition = "2024"
description = "Sphere related interfaces"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false }
sharesphere_core_user = { path = "../../core/user", default-features = false }
sharesphere_core_sphere = { path = "../../core/sphere", default-features = false }

leptos.workspace = true
leptos_axum = { workspace = true, optional = true }

log.workspace = true
url = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "sharesphere_core_sphere/ssr",
    "dep:leptos_axum",
    "dep:url",
]
