[package]
name = "sharesphere_app"
version = "0.1.0"
edition = "2024"
description = "Root of the ShareSphere app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_cmp_utils = { path = "../utils", default-features = false}
sharesphere_cmp_sphere = { path = "../sphere", default-features = false}
sharesphere_cmp_content = { path = "../content", default-features = false}
sharesphere_cmp_ui = { path = "../ui", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

axum = { workspace = true, optional = true}
leptos-fluent.workspace = true
leptos-use.workspace = true
log.workspace = true
regex = "1.12.3"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_cmp_utils/hydrate",
    "sharesphere_cmp_sphere/hydrate",
    "sharesphere_cmp_content/hydrate",
    "sharesphere_cmp_ui/hydrate",
]
ssr = [
    "dep:axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_cmp_utils/ssr",
    "sharesphere_cmp_sphere/ssr",
    "sharesphere_cmp_content/ssr",
    "sharesphere_cmp_ui/ssr",
]
