[package]
name = "sharesphere_cmp_base"
version = "0.1.0"
edition = "2024"
description = "Base components for business objects (spheres, posts, etc.)"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false}
sharesphere_core_user = { path = "../../core/user", default-features = false}
sharesphere_core_sphere = { path = "../../core/sphere", default-features = false}
sharesphere_core_content = { path = "../../core/content", default-features = false}
sharesphere_iface_user = { path = "../../interfaces/user", default-features = false}
sharesphere_iface_content = { path = "../../interfaces/content", default-features = false}
sharesphere_cmp_utils = { path = "../utils", default-features = false}
sharesphere_cmp_common = { path = "../common", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-fluent.workspace = true
leptos-use.workspace = true

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
chrono.workspace = true
const_format.workspace = true
http.workspace = true
log.workspace = true
markdown.workspace = true
openidconnect = { workspace = true, optional = true }
quick-xml.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
url.workspace = true
validator.workspace = true
web-sys.workspace = true

[dev-dependencies]
fluent-templates = "0.13.3"
indoc = "2.0.7"
sealed_test = "1.1.0"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_iface_user/hydrate",
    "sharesphere_iface_content/hydrate",
    "sharesphere_cmp_utils/hydrate",
    "sharesphere_cmp_common/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sharesphere_iface_user/ssr",
    "sharesphere_iface_content/ssr",
    "sharesphere_cmp_utils/ssr",
    "sharesphere_cmp_common/ssr",
    "dep:anyhow",
    "dep:async-trait",
    "dep:leptos_axum",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]

