[package]
name = "sharesphere_cmp_content"
version = "0.1.0"
edition = "2024"
description = "Content related components"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false }
sharesphere_core_user = { path = "../../core/user", default-features = false }
sharesphere_core_sphere = { path = "../../core/sphere", default-features = false }
sharesphere_core_content = { path = "../../core/content", default-features = false }
sharesphere_iface_user = { path = "../../interfaces/user", default-features = false }
sharesphere_iface_sphere = { path = "../../interfaces/sphere", default-features = false }
sharesphere_iface_content = { path = "../../interfaces/content", default-features = false }
sharesphere_cmp_utils = { path = "../utils", default-features = false }
sharesphere_cmp_common = { path = "../common", default-features = false }
sharesphere_cmp_base = { path = "../base", default-features = false }

leptos.workspace = true
leptos_router.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
url.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_iface_user/hydrate",
    "sharesphere_iface_sphere/hydrate",
    "sharesphere_iface_content/hydrate",
    "sharesphere_cmp_utils/hydrate",
    "sharesphere_cmp_common/hydrate",
    "sharesphere_cmp_base/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "sharesphere_core_sphere/ssr",
    "sharesphere_core_content/ssr",
    "sharesphere_iface_user/ssr",
    "sharesphere_iface_sphere/ssr",
    "sharesphere_iface_content/ssr",
    "sharesphere_cmp_utils/ssr",
    "sharesphere_cmp_common/ssr",
    "sharesphere_cmp_base/ssr",
]
