[package]
name = "sharesphere_cmp_sphere"
version = "0.1.0"
edition = "2024"
description = "Crate for components related to spheres and satellites"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false}
sharesphere_core_user = { path = "../../core/user", default-features = false}
sharesphere_core_sphere = { path = "../../core/sphere", default-features = false}
sharesphere_iface_sphere = { path = "../../interfaces/sphere", default-features = false}
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
url.workspace = true
web-sys.workspace = true

strum.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_iface_sphere/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "sharesphere_core_sphere/ssr",
    "sharesphere_iface_sphere/ssr",
    "dep:leptos_axum",
]

