[package]
name = "sharesphere_cmp_ui"
version = "0.1.0"
edition = "2024"
description = "Crate for various components (search, profile, etc.)"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false}
sharesphere_core_user = { path = "../../core/user", default-features = false}
sharesphere_core_sphere = { path = "../../core/sphere", default-features = false}
sharesphere_iface_sphere = { path = "../../interfaces/sphere", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
]

