[package]
name = "sharesphere_core_content"
version = "0.1.0"
edition = "2024"

[dependencies]
sharesphere_core_common = { path = "../common", default-features = false}
sharesphere_core_user = { path = "../user", default-features = false}
sharesphere_core_sphere = { path = "../sphere", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-fluent.workspace = true
leptos-use.workspace = true

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
chrono.workspace = true
log.workspace = true
lru = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
strum.workspace = true
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }
validator.workspace = true

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "sharesphere_core_sphere/ssr",
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:leptos_axum",
    "dep:lru",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
    "dep:url",
]
