[package]
name = "sharesphere_core_content"
version = "0.1.0"
edition = "2024"
description = "Content related (posts, comments) structs and functions"

[dependencies]
sharesphere_core_common = { path = "../common", default-features = false }
sharesphere_core_user = { path = "../user", default-features = false }
sharesphere_core_sphere = { path = "../sphere", default-features = false }

leptos.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

ammonia.workspace = true
chrono.workspace = true
gloo-net.workspace = true
http = { workspace = true, optional = true }
log.workspace = true
mime_guess.workspace = true
reqwest = { workspace = true, optional = true }
send_wrapper.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
url.workspace = true
tokio = { workspace = true, optional = true }
validator.workspace = true
web-sys.workspace = true

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "sharesphere_core_sphere/ssr",
    "dep:http",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]
