[package]
name = "sharesphere_iface_user"
version = "0.1.0"
edition = "2024"
description = "User related interfaces"

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false }
sharesphere_core_user = { path = "../../core/user", default-features = false }

leptos.workspace = true
leptos_axum = { workspace = true, optional = true }

log.workspace = true
openidconnect = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "leptos/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_user/ssr",
    "dep:leptos_axum",
    "dep:openidconnect",
]
